feat: Add handler to retrieve tables list
